--- a/css/visitor_style/post.css
+++ b/css/visitor_style/post.css
@@ -1,129 +1,140 @@
+:root {
+  --main-clr: #af2532;
+  --orange: #f39c12;
+  --yellow: #e4910b;
+  --black: #34495e;
+  --white: #fff;
+  --light-bg: #f5f5f5;
+  --light-color: #999;
+  --brdr: 0.2rem solid var(--yellow);
+  --brder: 0.2rem solid var(--main-clr);
+  --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+}
 
- 
- .posts-container .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(33rem, 1fr));
-    gap:1.5rem;
-    align-items: flex-start;
-    justify-content: center;
- }
- 
- .posts-container .box-container .box{
-    border:var(--border);
-    box-shadow: var(--box-shadow);
-    border-radius: .5rem;
-    background-color: var(--white);
-    padding:2rem;
-    overflow: hidden;
- }
- 
- .posts-container .box-container .box .post-admin{
-    display: flex;
-    align-items: center;
-    gap:1.5rem;
-    margin-bottom: 2rem;
- }
- 
- .posts-container .box-container .box .post-admin i{
-    text-align: center;
-    height: 4.5rem;
-    width: 5rem;
-    line-height: 4.2rem;
-    font-size: 2rem;
-    border:var(--border);
-    border-radius: .5rem;
-    background-color: var(--light-bg);
-    color:var(--black);
- }
- 
- .posts-container .box-container .box .post-admin a{
-    font-size: 2rem;
-    color:var(--main-color);
- }
- 
- .posts-container .box-container .box .post-admin a:hover{
-    color:var(--black);
- }
- 
- .posts-container .box-container .box .post-admin div{
-    font-size: 1.5rem;
-    margin-top: .2rem;
-    color:var(--light-color);
- }
- 
- .posts-container .box-container .box .post-image{
-    width: 100%;
-    border-radius: .5rem;
-    margin-bottom: 2rem;
- }
- 
- .posts-container .box-container .box .post-title{
-    font-size: 2rem;
-    color:var(--black);
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    margin-bottom: 1rem;
- }
- 
- .posts-container .box-container .box .post-content{
-    font-size: 2rem;
-    line-height: 1.5;
-    padding:.5rem 0;
-    color:var(--light-color);
-    white-space: pre-line;
- }
- 
- .posts-container .box-container .box .post-content::after{
-    content: '...';
- }
- 
- .posts-container .box-container .box .post-cat{
-    display: block;
-    margin-top: 2rem;
-    font-size: 1.7rem;
- }
- 
- .posts-container .box-container .box .post-cat i{
-    margin-right: .5rem;
-    color:var(--light-color);
- }
- 
- .posts-container .box-container .box .post-cat{
-    color:var(--main-color);
- }
- 
- .posts-container .box-container .box .post-cat:hover{
-    color:var(--black);
- }
- 
- .posts-container .box-container .box .icons{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap:1rem;
-    background-color: var(--light-bg);
-    border-radius: .5rem;
-    padding:1.5rem 2rem;
-    border:var(--border);
-    margin-top: 2rem;
- }
- 
- .posts-container .box-container .box .icons button{
-    cursor: pointer;
- }
- 
- .posts-container .box-container .box .icons i{
-    margin-right:.5rem;
-    font-size:2rem;
-    color:var(--light-color);
- }
- 
- .posts-container .box-container .box .icons span{
-    font-size: 2rem;
-    color:var(--main-color);
- }
- 
- .posts-container .box-container .box .icons *:hover{
-    color:var(--black);
- }
+.posts-container .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(33rem, 1fr));
+  gap: 1.5rem;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.posts-container .box-container .box {
+  border: var(--brdr);
+  box-shadow: var(--box-shadow);
+  border-radius: 0.5rem;
+  background-color: var(--white);
+  padding: 2rem;
+  overflow: hidden;
+}
+
+.posts-container .box-container .box .post-admin {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.posts-container .box-container .box .post-admin i {
+  text-align: center;
+  height: 4.5rem;
+  width: 5rem;
+  line-height: 4.2rem;
+  font-size: 2rem;
+  border: var(--brder);
+  border-radius: 0.5rem;
+  background-color: var(--light-bg);
+  color: var(--main-clr);
+}
+
+.posts-container .box-container .box .post-admin a {
+  font-size: 2rem;
+  color: var(--main-color);
+}
+
+.posts-container .box-container .box .post-admin a:hover {
+  color: var(--black);
+}
+
+.posts-container .box-container .box .post-admin div {
+  font-size: 1.5rem;
+  margin-top: 0.2rem;
+  color: var(--light-color);
+}
+
+.posts-container .box-container .box .post-image {
+  width: 100%;
+  border-radius: 0.5rem;
+  margin-bottom: 2rem;
+}
+
+.posts-container .box-container .box .post-title {
+  font-size: 2rem;
+  color: var(--black);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-bottom: 1rem;
+}
+
+.posts-container .box-container .box .post-content {
+  font-size: 2rem;
+  line-height: 1.5;
+  padding: 0.5rem 0;
+  color: var(--light-color);
+  white-space: pre-line;
+}
+
+.posts-container .box-container .box .post-content::after {
+  content: "...";
+}
+
+.posts-container .box-container .box .post-cat {
+  display: block;
+  margin-top: 2rem;
+  font-size: 1.7rem;
+}
+
+.posts-container .box-container .box .post-cat i {
+  margin-right: 0.5rem;
+  color: var(--light-color);
+}
+
+.posts-container .box-container .box .post-cat {
+  color: var(--main-color);
+}
+
+.posts-container .box-container .box .post-cat:hover {
+  color: var(--black);
+}
+
+.posts-container .box-container .box .icons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  background-color: var(--light-bg);
+  border-radius: 0.5rem;
+  padding: 1.5rem 2rem;
+  border: var(--brdr);
+  margin-top: 2rem;
+}
+
+.posts-container .box-container .box .icons button {
+  cursor: pointer;
+}
+
+.posts-container .box-container .box .icons i {
+  margin-right: 0.5rem;
+  font-size: 2rem;
+  color: var(--light-color);
+}
+
+.posts-container .box-container .box .icons span {
+  font-size: 2rem;
+  color: var(--main-color);
+}
+
+.posts-container .box-container .box .icons *:hover {
+  color: var(--black);
+}
