--- a/css/visitor_style/visitor_header.css
+++ b/css/visitor_style/visitor_header.css
@@ -1,160 +1,180 @@
+:root {
+  --main-clr: #af2532;
+  --red: #d32f2f;
+  --orange: #f39c12;
+  --yellow: #e4910b;
+  --black: #34495e;
+  --white: #fff;
+  --light-bg: #f5f5f5;
+  --light-color: #999;
+  --brdr: 0.2rem solid var(--yellow);
+  --brder: 0.2rem solid var(--main-clr);
+  --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+}
 
- 
- .empty{
-    border:var(--border);
-    border-radius: .5rem;
-    background-color: var(--white);
-    padding:1.5rem;
-    text-align: center;
-    width: 100%;
-    font-size: 2rem;
-    text-transform: capitalize;
-    color:var(--red);
-    box-shadow: var(--box-shadow);
- }
- 
- .heading{
-    margin-bottom: 2rem;
-    text-align: center;
-    font-size: 4rem;
-    color:var(--black);
-    text-transform: capitalize;
- }
- 
- .header{
-    background-color: var(--white);
-    box-shadow: var(--box-shadow);
-    border-bottom: var(--border);
-    position: sticky;
-    top:0; left:0; right: 0;
-    z-index: 1000;
- }
- 
- .header .flex{
-    display: flex;
-    align-items: center;
-    gap:1.5rem;
-    justify-content: space-between;
-    position: relative;
-    padding:1.5rem 2rem;
- }
- 
- .header .flex .logo{
-    font-size: 2.5rem;
-    color:var(--black);
- }
- 
- .header .flex .search-form{
-    border:var(--border);
-    border-radius: .5rem;
-    background-color: var(--light-bg);
-    display: flex;
-    gap:2rem;
-    padding:1.5rem 2rem;
-    width: 50rem;
- }
- 
- .header .flex .search-form .box{
-    width: 100%;
-    background: none;
-    font-size: 1.7rem;
-    color:var(--black);
- }
- 
- .header .flex .search-form .fa-search{
-    font-size: 2rem;
-    cursor: pointer;
-    color:var(--black);
-    background: none;
- }
- 
- .header .flex .icons div{
-    font-size: 2rem;
-    color:var(--black);
-    cursor: pointer;
-    margin-left: .5rem;
-    height: 4.5rem;
-    width: 4.7rem;
-    line-height: 4rem;
-    border:var(--border);
-    background-color: var(--light-bg);
-    border-radius: .5rem;
-    border-radius: .5rem;
-    text-align: center;
- }
- 
- .header .flex .icons div:hover{
-    background-color: var(--black);
-    color:var(--white);
- }
- 
- .header .flex .navbar{
-    position: absolute;
-    top:125%; right:2rem;
-    border: var(--border);
-    background-color: var(--white);
-    border-radius: .5rem;
-    width:30rem;
-    box-shadow: var(--border);
-    display: none;
-    animation: .2s linear fadeIn;
- }
- 
- .header .flex .navbar.active{
-    display: inline-block;
- }
- 
- @keyframes fadeIn {
-    0%{
-       transform: translateY(1rem);
-    }
- }
- 
- .header .flex .navbar a{
-    display: block;
-    margin:2rem;
-    font-size: 2rem;
-    color:var(--black);
- }
- 
- .header .flex .navbar a i{
-    margin-right: 1rem;
-    color:var(--main-color);
-    transition: .2s linear;
- }
- 
- .header .flex .navbar a:hover i{
-    margin-right: 2rem;
- }
- 
- .header .flex .profile{
-    position: absolute;
-    top:125%; right:2rem;
-    border: var(--border);
-    background-color: var(--white);
-    border-radius: .5rem;
-    width:30rem;
-    box-shadow: var(--border);
-    display: none;
-    padding: 1.5rem;
-    animation: .2s linear fadeIn;
-    text-align: center;
-    overflow: hidden;
- }
- 
- .header .flex .profile p{
-    padding-bottom: .7rem;
-    font-size: 2rem;
-    color:var(--light-color);
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
- }
- 
- .header .flex .profile.active{
-    display: inline-block;
- }
- 
- #search-btn{
-    display: none;
- }
+.empty {
+  border: var(--brdr);
+  border-radius: 0.5rem;
+  background-color: var(--white);
+  padding: 1.5rem;
+  text-align: center;
+  width: 100%;
+  font-size: 2rem;
+  text-transform: capitalize;
+  color: var(--red);
+  box-shadow: var(--box-shadow);
+}
+
+.heading {
+  margin-bottom: 2rem;
+  text-align: center;
+  font-size: 4rem;
+  color: var(--black);
+  text-transform: capitalize;
+}
+
+.header {
+  background-color: var(--white);
+  box-shadow: var(--box-shadow);
+  border-bottom: var(--border);
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+}
+
+.header .flex {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  justify-content: space-between;
+  position: relative;
+  padding: 1.5rem 2rem;
+}
+
+.header .flex .logo-img {
+  width: 8.7rem;
+  align-items: center;
+}
+
+.header .flex .search-form {
+  border: var(--border);
+  border-radius: 0.5rem;
+  background-color: var(--light-bg);
+  display: flex;
+  gap: 2rem;
+  padding: 1.5rem 2rem;
+  width: 50rem;
+}
+
+.header .flex .search-form .box {
+  width: 100%;
+  background: none;
+  font-size: 1.7rem;
+  color: var(--black);
+}
+
+.header .flex .search-form .fa-search {
+  font-size: 2rem;
+  cursor: pointer;
+  color: var(--black);
+  background: none;
+}
+
+.header .flex .icons div {
+  font-size: 2rem;
+  color: var(--main-clr);
+  cursor: pointer;
+  margin-left: 0.5rem;
+  height: 4.5rem;
+  width: 4.7rem;
+  line-height: 4rem;
+  border: var(--brder);
+  background-color: var(--light-bg);
+  border-radius: 0.5rem;
+  border-radius: 0.5rem;
+  text-align: center;
+}
+
+.header .flex .icons div:hover {
+  background-color: var(--main-clr);
+  color: var(--white);
+}
+
+.header .flex .navbar {
+  position: absolute;
+  top: 125%;
+  right: 2rem;
+  border: var(--border);
+  background-color: var(--white);
+  border-radius: 0.5rem;
+  width: 30rem;
+  box-shadow: var(--border);
+  display: none;
+  animation: 0.2s linear fadeIn;
+}
+
+.header .flex .navbar.active {
+  display: inline-block;
+}
+
+@keyframes fadeIn {
+  0% {
+    transform: translateY(1rem);
+  }
+}
+
+.header .flex .navbar a {
+  display: block;
+  margin: 2rem;
+  font-size: 2rem;
+  color: var(--black);
+}
+
+.header .flex .navbar a i {
+  margin-right: 1rem;
+  color: var(--main-clr);
+  transition: 0.2s linear;
+}
+
+.header .flex .navbar a:hover i {
+  margin-right: 2rem;
+}
+
+.header .flex .navbar span:hover {
+  color: var(--orange);
+}
+
+.header .flex .profile {
+  position: absolute;
+  top: 125%;
+  right: 2rem;
+  border: var(--border);
+  background-color: var(--white);
+  border-radius: 0.5rem;
+  width: 30rem;
+  box-shadow: var(--border);
+  display: none;
+  padding: 1.5rem;
+  animation: 0.2s linear fadeIn;
+  text-align: center;
+  overflow: hidden;
+}
+
+.header .flex .profile p {
+  padding-bottom: 0.7rem;
+  font-size: 2rem;
+  color: var(--light-color);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.header .flex .profile.active {
+  display: inline-block;
+}
+
+#search-btn {
+  display: none;
+}
